# src/main/java/com/creditas/controller/EmprestimoController.java
@@ -4,6 +4,7 @@ package com.creditas.controller;
 import com.creditas.controller.model.SimulacaoEmprestimoRequestDTO;
 import com.creditas.controller.model.SimulacaoEmprestimoResponseDTO;
 import com.creditas.service.EmprestimoService;
+import com.creditas.usecase.LoanSimulationUsecase;
 import lombok.AllArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
@@ -11,20 +12,19 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 
+import java.math.BigDecimal;
+
 @Controller
 @RequestMapping("/emprestimo")
 @AllArgsConstructor
 public class EmprestimoController {
 
-    private EmprestimoService emprestimoService;
+    private LoanSimulationUsecase emprestimoService;
 
     @GetMapping
     public ResponseEntity<SimulacaoEmprestimoResponseDTO> simularEmprestimo(@RequestBody SimulacaoEmprestimoRequestDTO request) {
-        var simulacaoEmprestimoResponseDTO = emprestimoService.simularEmprestimo(SimulacaoEmprestimoRequestDTO.builder()
-                .valorEmprestimo(request.valorEmprestimo())
-                .dataNascimento(request.dataNascimento())
-                .prazoMeses(request.prazoMeses()).build()
-        );
+        var simulacaoEmprestimoResponseDTO = emprestimoService.simulateLoan(request);
+
         return ResponseEntity.ok(simulacaoEmprestimoResponseDTO);
     }
 
