# src/main/resources/swagger.yaml
@@ -35,9 +35,9 @@ components:
     SimulacaoEmprestimoRequest:
       type: object
       required:
-        - valorEmprestimo
+        - loanValue
         - dataNascimento
-        - prazoMeses
+        - installments
       properties:
         valorEmprestimo:
           type: number
